Style fix: `ul` items in auction description do not overlap with sidebar
* Fix: `display: block` instead of default design standards `display:
  table`
* See convo at https://18f.slack.com/archives/ffd-uswds/p1467235312000725
* Also removed nested `usa-grid` and `usa-grid-full` classes per
  frontend dev advice

--- a/app/assets/stylesheets/components/_auctions-index.scss
+++ b/app/assets/stylesheets/components/_auctions-index.scss
@@ -10,4 +10,12 @@
 
 .auction-wrapper .issue-list-item {
   display: flex;
+
+  &:nth-child(2n) {
+    @include omega();
+  }
+}
+
+.auction-wrapper .issue-label {
+  padding: $site-margins;
 }
