--- a/app/assets/stylesheets/components/_nav-drawer.scss
+++ b/app/assets/stylesheets/components/_nav-drawer.scss
@@ -25,21 +25,6 @@
   }
 }
 
-
-.usa-grid,
-.usa-grid-full {
-  @include media($large) {
-    .usa-heading-small {
-      margin-bottom: -20px;
-      margin-left: -30px;
-    }
-  }
-
-  .usa-heading-small {
-    margin: 0;
-  }
-}
-
 .drawer-submenu-item a,
 .drawer-menu-item a {
   color: $color-white;
